packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_dev_mode_inlined.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
snapshot_kind: text
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/qwik';

export const App = component$(() => {
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
        </Cmp>
    );
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/qwik";
import { inlinedQrlDEV } from "@khulnasoft.com/qwik";
import { _jsxQ } from "@khulnasoft.com/qwik";
import { _jsxC } from "@khulnasoft.com/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrlDEV(()=>{
    return /*#__PURE__*/ _jsxC(Cmp, {
        children: /*#__PURE__*/ _jsxQ("p", null, {
            class: "stuff",
            onClick$: /*#__PURE__*/ inlinedQrlDEV(()=>console.log('warn'), "App_component_Cmp_p_onClick_vuXzfUTkpto", {
                file: "/user/qwik/src/test.tsx",
                lo: 168,
                hi: 193,
                displayName: "test.tsx_App_component_Cmp_p_onClick"
            })
        }, "Hello Qwik", 3, null, {
            fileName: "test.tsx",
            lineNumber: 7,
            columnNumber: 13
        })
    }, 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 9
    });
}, "App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 94,
    hi: 233,
    displayName: "test.tsx_App_component"
}));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AAGA,OAAO,MAAM,oBAAM,yCAAW;IAC1B,qBACI,MAAC;kBACG,cAAA,MAAC;YAAE,OAAM;YAAQ,QAAQ,8BAAE,IAAM,QAAQ,GAAG,CAAC;;;;;;WAAS;;;;;;;;;;AAGlE;;;;;IAAG\"}")
== DIAGNOSTICS ==

[]
